Refactor REST endpoints and add Docker setup
Change all REST endpoints to use "/api" prefix for better organization. Removed outdated test files and added new HomeRESTController. Updated Dockerfile and introduced docker-compose for easier setup. Added initial SQL script and documented Docker setup in the README.